# AI_Lab

./: .gitignore  pyproject.toml  requirements.txt
Lab_1/: classes.py  con_graph.csv  csv_preprocessing.py  task_1.py  task_1_solver.py
Lab_1/src/: classes.py  config.py  task_1.py  task_1_solver.py  task_2.py  task_2_solver.py  user_communication.py
Lab_1_graph_traversal/src/: csv_preprocessing.py  task_1.py  task_1_solver.py  task_2.py  task_2_solver.py  user_communication.py
Lab_2_logic_game_Halma/Test_cases/: test_moves_from_game.txt  win_check_no_win.txt
Lab_2_logic_game_Halma/src/: cli.py  compase_strategies.ipynb  constants.py  game.py  generate_comparisons.py  halma.py  minmax.py  run.py  strategy.py  test.ipynb  testing.ipynb  utils.py
Lab_2_logic_game_Halma/test_cases/: initial_state.txt  test_moves.txt  win_check_is_win.txt
Lab_3_knowledge_base_reasoning/: requirements.txt
Lab_3_knowledge_base_reasoning/src/: experta_testing.ipynb  github_examples.ipynb  knowledge_base.py  knowledge_engine.py  my_tests.ipynb  troubleshooting.py
Lab_4_machine_learning/: requirements.txt
Lab_4_machine_learning/Data/: t-shirts_profile.html
Lab_4_machine_learning/data/: t-shirts_profile.html
Lab_4_machine_learning/src/: data_profiling.ipynb  ml_process.ipynb  visualize_data.py
Lab_5_neural_network/: pyproject.toml
Lab_5_neural_network/src/: helper.py  mlp_regression.ipynb
Lab_5_neural_network/src/generate_embeddings/: generate_bert_embeddings.ipynb  generate_fasttext_embeddings.ipynb
